# supervised-concurrency-pipes

./: .project-settings.yml  LICENSE  supervised-concurrency-pipes.cabal
samples/pipes/: Main.hs
samples/token-stealing/: Main.hs
src/Pipes/Concurrent/: Supervised.hs
